--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
