--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
